fix award popout overflow

--- a/features/style.css
+++ b/features/style.css
@@ -1268,6 +1268,9 @@ bounceload {
     display:grid;
     grid-gap: 1em;
     place-items: center;
+    direction: rtl;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(6, auto);
 }
 
 #awardsAnchor .grid .award {
